# android-jni-pytorch-example

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/kr/dailylime/torchcvhelloworld/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/kr/dailylime/torchcvhelloworld/: MainActivity.java
app/src/main/jni/: CMakeLists.txt  kr_dailylime_torchcvhelloworld_MainActivity.cpp  kr_dailylime_torchcvhelloworld_MainActivity.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/kr/dailylime/torchcvhelloworld/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
